[package]
name = "tracli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
inquire = { version = "0.6.2", features = ["date"] }
ratatui = { version = "0.23", features = ["widget-calendar"] }
time = { version = "0.3.11",  features = ["local-offset"] }
crossterm = "0.26"
chrono = "0.4.31"
rusqlite = { version = "0.29.0", features = ["bundled", "chrono"] }